--- a/drupal/reinstall.yml
+++ b/drupal/reinstall.yml
@@ -14,6 +14,13 @@
     mysql_db: drupal
     cache_folder: /var/www/cache
     php_env_vars: '' # APP_ENV=dev - this varible will be set at PR_BUILDER from CI shell executor.
+    content_count: 20
+    comment_count: 5
+    content_types:
+      - forum
+      - faq
+      - csua_date
+      - csua_location
 
   tasks:
 
@@ -30,5 +37,10 @@
   - name: Installing drupal
     sudo: yes
     shell: "{{ php_env_vars}} drush -y si {{ installation_profile_name }} --db-url=mysql://{{ mysql_user }}:{{ mysql_pass }}@127.0.0.1:/{{ mysql_db }} --account-name={{ drupal_user }} --account-pass={{ drupal_pass }}"
+
+  - name: Generating content
+    sudo: yes
+    shell: "{{ php_env_vars}} drush generate-content --types={{ item }} {{ content_count }} {{ comment_count }}"
+    with_items: content_types
 
   handlers:
